# airqualityforecast

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  airq-azure-environment.yaml  config.yaml  pyproject.toml
.github/workflows/: cicd.yml  feature_pipeline_scheduel.yml  inference_pipeline.yml  main.yml  test.yml
src/: run_feature_pipeline.py  run_inference_pipeline.py  run_training_pipeline.py
src/components/: comp_api_feature_pipeline.py  comp_inference_pipeline.py  feature_component.yaml  inference_component.yaml  pipeline_definition.yaml
src/core/: data.py  loaders.py  model.py  pipelines.py  utils.py  visualisation.py
src/stages/: api_feature_pipeline.py  batch_feature_pipeline.py  hyperparam_optimization_pipeline.py  inference_pipeline.py  training_pipeline.py
tests/: test_loaders.py  test_model_class.py  test_utils.py  unit_tests.py
